feat: implement lighting