@@ -50,9 +50,9 @@ public class Mesh {
         String[] sar = r.split("\\s+");
 
         /* Parse object properties */
-        int verts_nb = new Integer(sar[0]).intValue();
-        int faces_nb = new Integer(sar[1]).intValue();
-        int edges_nb = new Integer(sar[2]).intValue();
+        int verts_nb = Integer.parseInt(sar[0]);
+        int faces_nb = Integer.parseInt(sar[1]);
+        int edges_nb = Integer.parseInt(sar[2]);
 
         /* Parse vertices and attributes */
         vertices = new Vector[verts_nb];
@@ -64,20 +64,20 @@ public class Mesh {
             sar = r.split("\\s+");
 
             vertices[i] = new Vector("v" + i, 4);
-            vertices[i].set(0, new Double(sar[0]).doubleValue());
-            vertices[i].set(1, new Double(sar[1]).doubleValue());
-            vertices[i].set(2, new Double(sar[2]).doubleValue());
+            vertices[i].set(0, Double.valueOf(sar[0]));
+            vertices[i].set(1, Double.valueOf(sar[1]));
+            vertices[i].set(2, Double.valueOf(sar[2]));
             vertices[i].set(3, 1.0);
-            colors[3 * i + 0] = new Double(sar[3]).doubleValue();
-            colors[3 * i + 1] = new Double(sar[4]).doubleValue();
-            colors[3 * i + 2] = new Double(sar[5]).doubleValue();
+            colors[3 * i + 0] = Double.valueOf(sar[3]);
+            colors[3 * i + 1] = Double.valueOf(sar[4]);
+            colors[3 * i + 2] = Double.valueOf(sar[5]);
             /* optionnal texture coordinates */
             if (sar.length >= 8) {
                 if (texCoords == null) {
                     texCoords = new double[2 * verts_nb];
                 }
-                texCoords[2 * i] = new Double(sar[6]).doubleValue();
-                texCoords[2 * i + 1] = new Double(sar[7]).doubleValue();
+                texCoords[2 * i] = Double.valueOf(sar[6]);
+                texCoords[2 * i + 1] = Double.valueOf(sar[7]);
             }
         }
 
@@ -87,13 +87,13 @@ public class Mesh {
             r = nextLine(in);
             sar = r.split("\\s+");
 
-            int en = new Integer(sar[0]).intValue();
+            int en = Integer.parseInt(sar[0]);
             if (en != 3) {
                 throw new IOException("Non-triangular meshes not supported.");
             }
-            faces[3 * i + 0] = new Integer(sar[1]).intValue();
-            faces[3 * i + 1] = new Integer(sar[2]).intValue();
-            faces[3 * i + 2] = new Integer(sar[3]).intValue();
+            faces[3 * i + 0] = Integer.parseInt(sar[1]);
+            faces[3 * i + 1] = Integer.parseInt(sar[2]);
+            faces[3 * i + 2] = Integer.parseInt(sar[3]);
 
         }
         in.close();
@@ -121,16 +121,26 @@ public class Mesh {
         normals = new Vector3[vertices.length];
 
         // Compute per face normals and set the vertex normal to the average normals
-        // across faces
-        // to the vertex.
+        // across faces to the vertex.
         try {
             for (int i = 0; i < 3 * getNumFaces(); i += 3) {
 
-                // TODO
+                Vector3 n = new Vector3();
 
-                Vector3 n = new Vector3(); // ?
+                n.set(0, vertices[faces[i + 1]].get(0) - vertices[faces[i]].get(0));
+                n.set(1, vertices[faces[i + 1]].get(1) - vertices[faces[i]].get(1));
+                n.set(2, vertices[faces[i + 1]].get(2) - vertices[faces[i]].get(2));
 
-                // ajoute la normale calculee a chq sommet de la face
+                Vector3 m = new Vector3();
+
+                m.set(0, vertices[faces[i + 2]].get(0) - vertices[faces[i]].get(0));
+                m.set(1, vertices[faces[i + 2]].get(1) - vertices[faces[i]].get(1));
+                m.set(2, vertices[faces[i + 2]].get(2) - vertices[faces[i]].get(2));
+
+                n = n.cross(m);
+                n.normalize();
+
+                // ajoute la normale calculee a chaque sommet de la face
                 for (int j = 0; j < 3; j++) {
                     Vector nj = normals[faces[i + j]];
 
